--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,10 @@ jobs:
         inputs:
           command: test
           arguments: '$(Build.SourcesDirectory)/SpinlifeTest.sln --configuration $(buildConfiguration)'
+        
+      - task: PublishBuildArtifacts@1
+        displayName: 'Publish Test Screenshots'
+        inputs:
+          PathtoPublish: '$(Build.SourcesDirectory)/TestResults'
+          ArtifactName: 'TestScreenshots'
+          publishLocation: 'Container'
